--- a/logistic/app_logistic/templates/layout.html
+++ b/logistic/app_logistic/templates/layout.html
@@ -132,16 +132,14 @@
           <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div> -->
-        <img src="/img/1.jpg" alt="Imagen de modal">
+        <img src="{% static '/img/1.jpg' %}" alt="Imagen de modal">
         <div class="modal-body">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col modalColImg">
-                        <img src="/img/PROSA.png" alt="Logo de prosa">
                     </div>
-                    <div class="col">
-                        Información de Acerca de...
-                    </div>
+
+                        Programa "Logistic". Escrito por Ing. Brenthon Ramirez Franco, Tel: 5613003803, Email: brerafra@gmail.com
                 </div>
             </div>
         </div>
@@ -193,9 +191,8 @@
 
     <footer class="main-footer">
         <div class="float-right d-none d-sm-block">
-          <b>Version</b> 3.1.0-rc
+          <b>Version</b> 3.1
         </div>
-        All rights reserved.
       </footer>
       
       <!-- Control Sidebar -->
